--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hola mundo
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>hola mundo</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="author" href="humans.txt">
+    </head>
+    <body>
+        <h1>Hola mundo</h1>
+        <script src="js/main.js"></script>
+    </body>
+</html>
